# ng28

./: README.md
zephyr-app/: CMakeLists.txt  README.md  prj.conf
zephyr-app/boards/: native_sim.conf  native_sim.overlay
zephyr-app/src/: config.hpp  display-sim.cpp  display.hpp  main.cpp  view-home.cpp  view-home.hpp  view.cpp  view.hpp  viewmanager.cpp  viewmanager.hpp
